--- a/analysis/first-analysis.Rmd
+++ b/analysis/first-analysis.Rmd
@@ -25,6 +25,7 @@ library(ggpubr)
 library(ggeasy)
 library(edgeR)
 library(scales)
+library(ngsReports)
 ```
 
 ```{r setOptions}
@@ -65,7 +66,7 @@ mcols(grGenes) %<>%
   DataFrame()
 ```
   
-  In order to perform adequate QC, an `EnsDb` object was obtained for Ensembl release `r ensemblVersion(ensDb)` using the  `AnnotationHub` package.
+In order to perform adequate QC, an `EnsDb` object was obtained for Ensembl release `r ensemblVersion(ensDb)` using the  `AnnotationHub` package.
 This provided the GC content and length for each of the `r comma(length(grTrans))` transcripts contained in that release.
 
 
@@ -97,6 +98,120 @@ featureCounts <-
 colnames(featureCounts) %<>% 
   str_remove(".Aligned.sortedByCoord.out.bam")
 ```
+
+# raw data QC
+
+```{r}
+fastqc_raw <- list.files(
+    path = "data/confidentialData/fastqc_raw/",
+    pattern = "zip", 
+    recursive = TRUE,
+    full.names = TRUE
+    ) %>% 
+    FastqcDataList()
+```
+
+## GC content
+Strange peaks are observed with 100% GC content. After a quick google search, it appears these are sequeniccng artefacts. 
+
+```{r}
+plotGcContent(
+  x = fastqc_raw, 
+  plotType = "line",
+  gcType = "Transcriptome"
+) +
+  theme(legend.position = "none")
+```
+
+## Over-represented sequences 
+
+There doesn't appear to be any over-represented sequences which are worrying. The top ones are mostly adaptors which are removed in the snakemake pipeline. 
+
+```{r}
+getModule(fastqc_raw, "Overrep") %>% 
+    group_by(Sequence, Possible_Source) %>% 
+    summarise(`Found In` = n(), `Highest Percentage` = max(Percentage)) %>% 
+    arrange(desc(`Highest Percentage`), desc(`Found In`)) %>% 
+    ungroup() %>% 
+    dplyr::slice(1:30) %>%
+    mutate(`Highest Percentage` = percent_format(0.01)(`Highest Percentage`/100)) %>%
+    pander(
+        justify = "llrr",
+        caption = paste(
+            "*Top", nrow(.),"Overrepresented sequences.",
+            "The number of samples they were found in is shown,",
+            "along with the percentage of the most 'contaminated' sample.*"
+            )
+    )
+```
+
+# Trimmed QC
+
+```{r trimStats}
+fastqc_trim <- list.files(path = "data/confidentialData/fastqc_trim", 
+                          pattern = "zip", 
+                          full.names = TRUE) %>%
+  FastqcDataList()
+
+trimStats <- readTotals(fastqc_raw) %>%
+  dplyr::rename(Raw = Total_Sequences) %>%
+  left_join(readTotals(fastqc_trim), by = "Filename") %>%
+  dplyr::rename(Trimmed = Total_Sequences) %>%
+  dplyr::filter(grepl("r1", Filename)) %>%
+  mutate(
+    Discarded = 1 - Trimmed/Raw,
+    Retained = Trimmed / Raw
+  )
+```
+
+After adapter trimming between `r pander(range(percent_format(0.01)(trimStats$Discarded)))` of reads were discarded.
+
+```{r}
+getModule(fastqc_trim, "Overrep") %>% 
+    group_by(Sequence, Possible_Source) %>% 
+    summarise(`Found In` = n(), `Highest Percentage` = max(Percentage)) %>% 
+    arrange(desc(`Highest Percentage`), desc(`Found In`)) %>% 
+    ungroup() %>% 
+    dplyr::slice(1:30) %>%
+    mutate(`Highest Percentage` = percent_format(0.01)(`Highest Percentage`/100)) %>%
+    pander(
+        justify = "llrr",
+        caption = paste(
+            "*Top", nrow(.),"Overrepresented sequences.",
+            "The number of samples they were found in is shown,",
+            "along with the percentage of the most 'contaminated' sample.*"
+            )
+    )
+```
+
+
+## GC content
+```{r}
+ggarrange(
+  plotGcContent(
+    x = fastqc_raw, 
+    plotType = "line",
+    gcType = "Transcriptome"
+  ) +
+    theme(legend.position = "none") +
+    ggtitle("Before trimming/filtering"), 
+  plotGcContent(
+  x = fastqc_trim, 
+  plotType = "line",
+  gcType = "Transcriptome"
+) +
+  theme(legend.position = "none")+
+  ggtitle("After trimming/filtering")
+) 
+```
+
+No evident changes were observed to GC content after trimming and quality filtering.
+
+
+# Align QC
+
+Trimmed reads were aligned to the human genome (Ensembl relealease 98) using `STAR 2.7.0d` and summarised to each gene using `featureCounts`. These counts were to be used for all gene-level analysis. 
+
 
 ## Filtering lowly expressed genes
 
@@ -186,7 +301,7 @@ dge <- featureCounts %>%
 
 ## Check library sizes
 
-Libary sizes vary considerably, which appears to be due to samples being sequenced across multiple runs. Library sizes range between  `r pander(comma(range(dge$samples$lib.size)))`. Although concerning, this will be accounted for using the `TMM normalisation`.
+Libary sizes vary considerably, which appears to be due to samples being sequenced across multiple runs. Library sizes range between  `r pander(comma(range(dge$samples$lib.size)))`. Although concerning, this will be accounted for using  `TMM normalisation`.
 ```{r}
 dge$samples %>% 
   ggplot(aes(x = specimenIdSource, y = lib.size, fill = sequencingBatch)) + 
